# chess

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  test.py
chess/: _types.py  app.py  events.py
chess/config/: config.py
chess/controllers/: chess_controller.py  constants.py  game_session_controller.py
chess/lib/: event_bus.py  singleton.py  styled_string.py  vec.py
chess/models/chess/: async_chess_server.py  board.py  chess_engine.py  chess_game.py  chess_model.py  chess_service.py  constants.py  figure.py  figures.py  game_mode.py  game_state.py  games.py  party.py  utils.py
chess/models/chess/games/: game.py  game_mode.py  game_presets.py  local_game.py  net_game_client.py
chess/utils/: __init__.py  str_to_list.py  utils.py
chess/views/: base.py  chess_view.py  console_renderer.py  constants.py  events.py  events_queue.py  utils.py
chess/views/chess/: local_game.py  main_menu.py  view.py
chess/views/lib/: board.py  figure_chooser.py  navigator.py  view.py
chess/views/utils/: __init__.py  figures_map.py  generator.py  utils.py
chess/views/widgets/: board_widget.py  modern_board_widget.py
server/: client.py  server.py
server/api/: message.proto
tests/: test_chess_engine.py
