[tool.poetry]
name = "chess"
version = "0.1.0"
description = "Chess in the terminal"
authors = ["Danil Sokolov <danilzyx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bidict = "^0.22.1"
blinker = "^1.5"
npyscreen = "^4.10.5"

windows-curses = {version = '^2.3.1', platform = 'windows'}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
